--- a/projects/core/argocd/configmap.yaml
+++ b/projects/core/argocd/configmap.yaml
@@ -14,6 +14,12 @@ data:
       - Backup
       clusters:
       - "*"
+    - apiGroups:
+      - "*"
+      kinds:
+      - ProviderConfigUsage
+      clusters:
+      - "*"
   statusbadge.enabled: "true"
   kustomize.buildOptions: --enable-helm
   url: https://argocd.local.lan.vernal.dev
