--- a/projects/root/bootstrap/applicationset.yaml
+++ b/projects/root/bootstrap/applicationset.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: argocd
 spec:
   goTemplate: true
-  goTemplateOptions: ["missingkey=error"]
+  goTemplateOptions:
+  - missingkey=error
   generators:
   - matrix:
       generators:
