--- a/projects/core/keycloak/internal/nginx.conf
+++ b/projects/core/keycloak/internal/nginx.conf
@@ -11,6 +11,6 @@ server {
     proxy_set_header    X-Forwarded-Proto $scheme;
     proxy_http_version  1.1;
 
-    proxy_pass http://keycloak-service.keycloak.svc.cluster.local;
+    proxy_pass http://keycloak.keycloak.svc.cluster.local;
   }
 }
