--- a/projects/core/keycloak/keycloak/httproute.yaml
+++ b/projects/core/keycloak/keycloak/httproute.yaml
@@ -15,5 +15,5 @@ spec:
         type: PathPrefix
         value: /
     backendRefs:
-    - name: keycloak-service
+    - name: keycloak
       port: 80
