added reset password ui

--- a/projects/core/keycloak/resources/vernal.realm.yaml
+++ b/projects/core/keycloak/resources/vernal.realm.yaml
@@ -5,6 +5,16 @@ metadata:
 spec:
   forProvider:
     realm: vernal
+    resetPasswordAllowed: true
+    smtpServer:
+      - auth:
+        - passwordSecretRef:
+            key: mspggxgbvratdxjx
+            name: vernal
+            namespace: keycloak
+        from: vernal.developer@gmail.com
+        host: smtp.gmail.com
+        port: "587"
     displayName: Vernal - SSO
     displayNameHtml: <div class="kc-logo-text"><span>Vernal - SSO</span></div>
     enabled: true
