added sealed secret for gmail smtp

--- a/projects/core/keycloak/resources/kustomization.yaml
+++ b/projects/core/keycloak/resources/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
 - ./groupmembershipprotocolmapper.yaml
 - ./groups.clientscope.yaml
 - ./providerconfig.yaml
+- ./smtp.sealedsecret.yaml
 - ./vernal.realm.yaml
