added username to gmail smtp config

--- a/projects/core/keycloak/resources/vernal.realm.yaml
+++ b/projects/core/keycloak/resources/vernal.realm.yaml
@@ -12,6 +12,7 @@ spec:
           key: password
           name: smtp-cred
           namespace: keycloak
+        username: vernal.developer@gmail.com
       from: vernal.developer@gmail.com
       host: smtp.gmail.com
       port: "587"
