--- a/projects/core/keycloak/keycloak-config-cli/kustomization.yaml
+++ b/projects/core/keycloak/keycloak-config-cli/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: keycloak
 resources:
 - ./crossplane.sealedsecret.yaml
-- ./deployment.yaml
+- ./job.yaml
 - ./master-realm.sealedsecret.yaml
