--- a/projects/core/keycloak/resources/vernal.realm.yaml
+++ b/projects/core/keycloak/resources/vernal.realm.yaml
@@ -12,8 +12,8 @@ spec:
           key: password
           name: smtp-cred
           namespace: keycloak
-        username: vernal.developer@gmail.com
-      from: vernal.developer@gmail.com
+        username: "vernal.developer@gmail.com"
+      from: "vernal.developer@gmail.com"
       host: smtp.gmail.com
       port: "587"
       starttls: true
