--- a/projects/core/keycloak/resources/vernal.realm.yaml
+++ b/projects/core/keycloak/resources/vernal.realm.yaml
@@ -5,7 +5,6 @@ metadata:
 spec:
   forProvider:
     realm: vernal
-    resetPasswordAllowed: true
     smtpServer:
     - auth:
       - passwordSecretRef:
@@ -20,5 +19,9 @@ spec:
     displayName: Vernal - SSO
     displayNameHtml: <div class="kc-logo-text"><span>Vernal - SSO</span></div>
     enabled: true
+    registrationAllowed: true
+    registrationEmailAsUsername: true
+    rememberMe: true
+    resetPasswordAllowed: true
   providerConfigRef:
     name: keycloak-config
