sync cert manager without certs nor issuers

--- a/projects/core/cert-manager/kustomization.yaml
+++ b/projects/core/cert-manager/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 
 resources:
 - https://github.com/cert-manager/cert-manager/releases/download/v1.14.1/cert-manager.yaml
-- ./certificates
-- ./issuers
-- ./cloudflare.sealedsecret.yaml
+# - ./certificates
+# - ./issuers
+# - ./cloudflare.sealedsecret.yaml
 
 patches:
 - path: ./namespace.yaml
