--- a/projects/apps/vernal-apps/sample-group-default-guests.app.yaml
+++ b/projects/apps/vernal-apps/sample-group-default-guests.app.yaml
@@ -11,9 +11,13 @@ spec:
   components:
     - name: backend
       image: ghcr.io/vernaldev/sample-application_backend:latest
+      minReplicas: 1
+      maxReplicas: 3
       containerPort: 3001
     - name: frontend
       image: ghcr.io/vernaldev/sample-application_frontend:latest
+      minReplicas: 1
+      maxReplicas: 3
       containerPort: 3000
   postgres:
     enabled: true
