--- a/projects/apps/vernal-apps/test-group-default-guests.app.yaml
+++ b/projects/apps/vernal-apps/test-group-default-guests.app.yaml
@@ -9,16 +9,21 @@ spec:
     revision: main
     path: /
   components:
-    - name: backend
-      image: ghcr.io/vernaldev/test-application_backend:latest
-      minReplicas: 3
-      maxReplicas: 5
-      containerPort: 3001
-    - name: frontend
-      image: ghcr.io/vernaldev/test-application_frontend:latest
-      minReplicas: 1
-      maxReplicas: 3
-      containerPort: 3000
+  - name: backend
+    image: ghcr.io/vernaldev/test-application_backend:latest
+    minReplicas: 3
+    maxReplicas: 5
+    containerPort: 3001
+  - name: frontend
+    image: ghcr.io/vernaldev/test-application_frontend:latest
+    minReplicas: 1
+    maxReplicas: 3
+    containerPort: 3000
+  - name: postgres
+    image: postgres:16
+    minReplicas: 1
+    maxReplicas: 3
+    containerPort: 5432
   postgres:
     enabled: true
     urlEnvVar: DATABASE_URL
