added pod and service monitors for istio

--- a/projects/core/istio/kustomization.yaml
+++ b/projects/core/istio/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
 - ./https-redirect.httproute.yaml
 - ./local-lan-vernal-dev.gateway.yaml
 - ./namespace.yaml
+- ./podmonitor.yaml
+- ./servicemonitor.yaml
 
 helmCharts:
 - includeCRDs: true
