allow grafana dashboard embedding

--- a/projects/core/monitoring/grafana.configmap.yaml
+++ b/projects/core/monitoring/grafana.configmap.yaml
@@ -6,6 +6,8 @@ metadata:
 data:
   # Root settings
   GF_SECURITY_COOKIE_SECURE: "true"
+  GF_SECURITY_COOKIE_SAMESITE: none
+  GF_SECURITY_ALLOW_EMBEDDING: "true"
   GF_INSTANCE_NAME: vernal-grafana
   GF_SERVER_DOMAIN: grafana.local.lan.vernal.dev
   GF_SERVER_ROOT_URL: https://grafana.local.lan.vernal.dev
