add cnpg config for inherited annotations and labels

--- a/projects/core/cnpg/kustomization.yaml
+++ b/projects/core/cnpg/kustomization.yaml
@@ -3,3 +3,4 @@ kind: Kustomization
 
 resources:
 - https://raw.githubusercontent.com/cloudnative-pg/cloudnative-pg/release-1.22/releases/cnpg-1.22.1.yaml
+- ./configmap.yaml
