set specific labels for cnpg label inheritance

--- a/projects/core/cnpg/configmap.yaml
+++ b/projects/core/cnpg/configmap.yaml
@@ -4,5 +4,4 @@ metadata:
   name: cnpg-controller-manager-config
   namespace: cnpg-system
 data:
-  INHERITED_ANNOTATIONS: "*"
-  INHERITED_LABELS: "*"
+  INHERITED_LABELS: app.kubernetes.io/part-of, app.kubernetes.io/managed-by, backstage.io/kubernetes-id
