set username to email for admin

--- a/projects/core/keycloak/resources/admin.user.yaml
+++ b/projects/core/keycloak/resources/admin.user.yaml
@@ -17,6 +17,6 @@ spec:
         namespace: keycloak
     realmIdRef:
       name: vernal
-    username: admin
+    username: admin@vernal.dev
   providerConfigRef:
     name: keycloak-config
