fix argocd admin group members

--- a/projects/core/argocd/infra/admins.memberships.yaml
+++ b/projects/core/argocd/infra/admins.memberships.yaml
@@ -7,7 +7,7 @@ spec:
     groupIdRef:
       name: argocd-admins
     members:
-    - admin
+    - admin@vernal.dev
     realmIdRef:
       name: vernal
   providerConfigRef:
